# multi_uav_strike

./: CMakeLists.txt  LICENSE  README.md  package.xml
.claude/: MEMORY.md  multi_uav_strike_user.md
docs/: DEVELOPMENT_ROADMAP.md  SYSTEM_REQUIREMENTS.md
include/multi_uav_strike/: guidance_strategies.h
launch/: dual_uav_strike_test.launch  gimbal_simulator.launch  gs_simulator.launch  multi_uav_strike.launch  single_uav_strike_test.launch  single_uav_strike_test_v2.launch  target_motion_simulator.launch
rviz/: view_strike.rviz  view_strike_dual.rviz  view_strike_single.rviz
scripts/: gs_simulator_node.py
src/: comm_node.cpp  gimbal_simulator_node.cpp  guidance_control_node.cpp  guidance_strategies.cpp  mission_manager_node.cpp  target_estimator_node.cpp  target_motion_simulator_node.cpp  waypoint_distributor_node.cpp  waypoint_executor_node.cpp
