<?xml version="1.0"?>
<package format="2">
  <!-- 包名（必须和你确定的multi_uav_strike一致） -->
  <name>multi_uav_strike</name>
  <version>0.0.1</version>
  <description>Multi-UAV strike system with gimbal target localization and guidance (ROS1)</description>
  <maintainer email="your_email@example.com">Your Name</maintainer> <!-- 替换为你的信息 -->
  <license>MIT</license> <!-- 推荐MIT开源协议，可按需修改 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 编译依赖：覆盖原生消息+ROS核心功能 -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <!-- 运行依赖：和编译依赖一致，保证运行时能找到库 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <!-- ROS版本兼容声明 -->
  <export>
  </export>
</package>